--- a/package.json
+++ b/package.json
@@ -37,12 +37,12 @@
   "dependencies": {
     "@angular-extensions/elements": "^8.4.1",
     "@angular-extensions/model": "^8.0.0",
-    "@angular/animations": "~8.0.0",
-    "@angular/cdk": "~8.0.0",
-    "@angular/common": "~8.0.0",
-    "@angular/compiler": "~8.0.0",
-    "@angular/core": "~8.0.0",
-    "@angular/forms": "~8.0.0",
+    "@angular/animations": "^8.2.14",
+    "@angular/cdk": "^8.2.3",
+    "@angular/common": "^8.2.14",
+    "@angular/compiler": "^8.0.0",
+    "@angular/core": "^8.0.0",
+    "@angular/forms": "^8.2.14",
     "@angular/http": "^8.0.0-beta.10",
     "@angular/material": "~8.0.0",
     "@angular/platform-browser": "~8.0.0",
@@ -62,6 +62,7 @@
     "@ngx-translate/http-loader": "^4.0.0",
     "bootstrap": "^4.3.1",
     "browser-detect": "^0.2.28",
+    "core-js": "^3.4.0",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.5.0",
     "tslib": "^1.9.0",
